		console still need a valid configured tty.
		Fixed a bug in the email menu that would let the current
		mailbox disappear.

	mbnewusr:
                There is no check anymore for a valid tty with network calls,
                instead a fake ttyinfo record is created. Modem/ISDN and
                console still need a valid configured tty.

	mbsetup:
		Removed settings for users screenlength.
		In tty setup the network records are automatic removed. The
		setting for auth log is removed (was never used).

	lang:	Removed prompts 64, 80 and 81.
		Changed prompt 348.
		Added prompt 31.

	examples:
		removed Change Screenlength from the English menus and 
		txtfiles.


v0.80.0		27-Oct-2004 - 06-Oct-2005


		Yes, this release took too long to complete. But there were too
		many problems that a stable release wasn't a good idea.

        general:
                Due to lack of maintainers italian language support is dropped.
                Upgraded to ftscprod.010
                Added port to OpenBSD, is under test (and doesn't work yet).
                Code cleanup so that compile stops on unknown OSes and CPUs
                instead of missing code parts.
                Added Unix codepage KOI8-R (Russian) and patches from Dmitry
                Komissaroff.
                Updated Copyright notices to 2004 to 2005.
                From filetranfer records removed the batch and bidirectional
                switches, these are no longer needed.
                Added new subdirectory mbutils. Some sources from the mbsebbs
                subdirectory are moved there.
                Changed the CFLAGS back from -O3 to -O2 since there seem some
                stablity problems and I want to rule out the possibility that
                this is caused by bad gcc optimisation.

	upgrade:
                In mbsetup menu 8.2 remove the Italian language.
                In /opt/mbse "rm -rf italian".
                In /opt/mbse/etc "rm italian.lang".