@@ -10,13 +10,15 @@ COMMON_SRCS	= clcomm.c client.c crc.c semafore.c signame.c charset.c remask.c \
 		  batchrd.c ftn.c pktname.c mangle.c sectest.c proglock.c magic.c \
 		  dostran.c ftnmsg.c mbfile.c nodelock.c rawio.c strcasestr.c \
 		  execute.c expipe.c getheader.c noderecord.c rfcaddr.c strutil.c \
-		  faddr.c gmtoffset.c packet.c rfcdate.c term.c endian.c timers.c
+		  faddr.c gmtoffset.c packet.c rfcdate.c term.c endian.c timers.c \
+		  pidinfo.c
 COMMON_OBJS	= clcomm.o client.o crc.o semafore.o signame.o charset.o remask.o \
 		  ftscprod.o attach.o falists.o hdr.o parsedate.o rfcmsg.o unpacker.o \
 		  batchrd.o ftn.o pktname.o mangle.o sectest.o proglock.o rearc.o \
 		  dostran.o ftnmsg.o mbfile.o nodelock.o rawio.o strcasestr.o magic.o \
 		  execute.o expipe.o getheader.o noderecord.o rfcaddr.o strutil.o \
-		  faddr.o gmtoffset.o packet.o rfcdate.o term.o endian.o timers.o
+		  faddr.o gmtoffset.o packet.o rfcdate.o term.o endian.o timers.o \
+		  pidinfo.o
 COMMON_HDRS	= mbselib.h
 NODELIST_SRCS	= nodelist.c
 NODELIST_OBJS	= nodelist.o
@@ -166,6 +168,7 @@ rfcdate.o: ../config.h mbselib.h
 term.o: ../config.h mbselib.h users.h
 endian.o: ../config.h mbselib.h
 timers.o: ../config.h mbselib.h
+pidinfo.o: ../config.h mbselib.h
 dbcfg.o: ../config.h mbselib.h mbse.h users.h mbsedb.h
 dbdupe.o: ../config.h mbselib.h mbse.h users.h mbsedb.h
 dbftn.o: ../config.h mbselib.h users.h mbsedb.h
