@@ -23,6 +23,9 @@ v0.81.0		07-Oct-2005
                 instead a fake ttyinfo record is created. Modem/ISDN and
                 console still need a valid configured tty.
 
+	mbtask:
+		Logs program name that locks serial ports.
+
 	mbsetup:
 		Removed settings for users screenlength.
 		In tty setup the network records are automatic removed. The
